# webperf-selfhosted

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  jsrepo.config.ts  package.json  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci-probe.yml  ci-selfhost.yml  publish-browser-audit-image.yml  publish-probe-image.yml
.sampo/: config.toml
apps/api/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
apps/browser-audit-worker/: Dockerfile  README.md  package.json
apps/console/: .dev.vars.example  Dockerfile  package.json  svelte.config.js  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/control/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
apps/probe-rs/: Cargo.toml  Dockerfile  README.md
apps/probe-rs/crates/probe-client/: Cargo.toml
apps/probe-rs/crates/probe-client/src/: lib.rs
apps/probe-rs/crates/probe-contract-tests/: Cargo.toml
apps/probe-rs/crates/probe-contract-tests/src/: lib.rs
apps/probe-rs/crates/probe-contract-tests/tests/: parity.rs
apps/probe-rs/crates/probe-core/: Cargo.toml
apps/probe-rs/crates/probe-core/src/: lib.rs
apps/probe-rs/crates/probe-server/: Cargo.toml
apps/probe-rs/crates/probe-server/src/: lib.rs  main.rs
apps/scheduler/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
docs/: cloud-vs-selfhosted.md  console-ia.md  design-system.md  execution-model.md  github-launch.md  install.md  scope.md
tooling/: justfile
(+144 files in other folders)
