[workspace]
members = [
  "crates/probe-core",
  "crates/probe-client",
  "crates/probe-server",
  "crates/probe-contract-tests",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json", "macros"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.7"
