[package]
name = "probe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
probe-client = { path = "../probe-client" }
probe-core = { path = "../probe-core" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
